Installing Rancher on Harvester VM for rancher integration tests

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -49,6 +49,9 @@
     "list_harvester_settings": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings",
     "get_api_ui_version": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/api-ui-version",
     "get_backup_target": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/backup-target",
+    "get_cluster_registration_url": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/cluster-registration-url",
+    "update_cluster_registration_url": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/cluster-registration-url",
+    "get_kubeconfig": "{{ harvester_endpoint }}/v1/management.cattle.io.clusters/local?action=generateKubeconfig",
     "create_user": "{{ harvester_endpoint }}/v1/harvesterhci.io.users",
     "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
     "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
