Fix terraform tests for vlan network

--- a/harvester_e2e_tests/templates/resource_network.tf.j2
+++ b/harvester_e2e_tests/templates/resource_network.tf.j2
@@ -1,6 +1,7 @@
 resource "harvester_network" "{{ name }}" {
   name      = "{{ name }}"
   namespace = "{{ net_namespace | default('default') }}"
+  description = "Network created by terraform tests"
 
   vlan_id = {{ vlan_id }} 
 
