Improve Rancher integration test
1. Refactor the Rancher integration tests into their own file.
2. Require external Rancher instance. Running a Rancher VM in Harvester is
   reliable, especially in networking. As such, the Rancher VM setup code is
   being removed.
3. Retry on 500 on all HTTP methods.

--- a/harvester_e2e_tests/templates/import_harvester_cluster.json.j2
+++ b/harvester_e2e_tests/templates/import_harvester_cluster.json.j2
@@ -1,5 +1,10 @@
 {# Template for importing harvester cluster #}
 
+{% if test_environment is not defined or not test_environment|length %}
+    {% set test_environment = "unknown" %}
+{% endif %}
+
+{% set cluster_name = "harvester-" ~ test_environment ~ "-" ~ random_alphanumeric(length=5) %}
 {
     "type": "provisioning.cattle.io.cluster",
     "metadata": {
@@ -7,7 +12,7 @@
         "annotations": {
             "field.cattle.io/description": "harvester"
         },
-        "name": "harvester"
+        "name": "{{ cluster_name }}"
     },
     "spec": {}
 }
