--- a/harvester_e2e_tests/templates/rancher_cluster_cloud_credentials.json.j2
+++ b/harvester_e2e_tests/templates/rancher_cluster_cloud_credentials.json.j2
@@ -1,4 +1,9 @@
 {# Template for rancher rke2 cloud credentials#}
+{% if test_environment is not defined or not test_environment|length %}
+    {% set test_environment = "unknown" %}
+{% endif %}
+
+{% set name = "harvester-cred-" ~ test_environment ~ "-" ~ cluster_id %}
 
 {
     "type": "provisioning.cattle.io/cloud-credential",
