--- a/harvester_e2e_tests/templates/rancher_provision_rke2_cluster.json.j2
+++ b/harvester_e2e_tests/templates/rancher_provision_rke2_cluster.json.j2
@@ -4,12 +4,12 @@
     "apiVersion":"provisioning.cattle.io/v1",
     "kind":"Cluster",
     "metadata": {
-        "namespace": "fleet-default",
+        "namespace": "{{ cluster_namespace | default('fleet-default') }}",
         "name": "{{ name }}"
     },
     "spec": {
         "cloudCredentialSecretName":"{{ cloud_credential_id }}",
-        "kubernetesVersion": "v1.21.6+rke2r1",
+        "kubernetesVersion": "{{ kubernetes_version | default('v1.21.6+rke2r1') }}",
         "rkeConfig":{
             "machineGlobalConfig": {
                 "cni":"calico",
