--- a/integration/assets/highlight.css
+++ b/integration/assets/highlight.css
@@ -7,6 +7,20 @@
     --dark-hl-2: #D4D4D4;
     --light-hl-3: #0000FF;
     --dark-hl-3: #CE9178;
+    --light-hl-4: #001080;
+    --dark-hl-4: #9CDCFE;
+    --light-hl-5: #795E26;
+    --dark-hl-5: #DCDCAA;
+    --light-hl-6: #A31515;
+    --dark-hl-6: #CE9178;
+    --light-hl-7: #CD3131;
+    --dark-hl-7: #F44747;
+    --light-hl-8: #0000FF;
+    --dark-hl-8: #569CD6;
+    --light-hl-9: #000000;
+    --dark-hl-9: #C8C8C8;
+    --light-hl-10: #098658;
+    --dark-hl-10: #B5CEA8;
     --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
@@ -16,6 +30,13 @@
     --hl-1: var(--light-hl-1);
     --hl-2: var(--light-hl-2);
     --hl-3: var(--light-hl-3);
+    --hl-4: var(--light-hl-4);
+    --hl-5: var(--light-hl-5);
+    --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 } }
 
@@ -24,6 +45,13 @@
     --hl-1: var(--dark-hl-1);
     --hl-2: var(--dark-hl-2);
     --hl-3: var(--dark-hl-3);
+    --hl-4: var(--dark-hl-4);
+    --hl-5: var(--dark-hl-5);
+    --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 } }
 
@@ -32,6 +60,13 @@ body.light {
     --hl-1: var(--light-hl-1);
     --hl-2: var(--light-hl-2);
     --hl-3: var(--light-hl-3);
+    --hl-4: var(--light-hl-4);
+    --hl-5: var(--light-hl-5);
+    --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 }
 
@@ -40,6 +75,13 @@ body.dark {
     --hl-1: var(--dark-hl-1);
     --hl-2: var(--dark-hl-2);
     --hl-3: var(--dark-hl-3);
+    --hl-4: var(--dark-hl-4);
+    --hl-5: var(--dark-hl-5);
+    --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 }
 
@@ -47,4 +89,11 @@ body.dark {
 .hl-1 { color: var(--hl-1); }
 .hl-2 { color: var(--hl-2); }
 .hl-3 { color: var(--hl-3); }
+.hl-4 { color: var(--hl-4); }
+.hl-5 { color: var(--hl-5); }
+.hl-6 { color: var(--hl-6); }
+.hl-7 { color: var(--hl-7); }
+.hl-8 { color: var(--hl-8); }
+.hl-9 { color: var(--hl-9); }
+.hl-10 { color: var(--hl-10); }
 pre, code { background: var(--code-background); }
