--- a/integration/assets/highlight.css
+++ b/integration/assets/highlight.css
@@ -7,20 +7,26 @@
     --dark-hl-2: #D4D4D4;
     --light-hl-3: #0000FF;
     --dark-hl-3: #CE9178;
-    --light-hl-4: #001080;
-    --dark-hl-4: #9CDCFE;
-    --light-hl-5: #795E26;
-    --dark-hl-5: #DCDCAA;
-    --light-hl-6: #A31515;
-    --dark-hl-6: #CE9178;
-    --light-hl-7: #CD3131;
-    --dark-hl-7: #F44747;
-    --light-hl-8: #0000FF;
-    --dark-hl-8: #569CD6;
-    --light-hl-9: #000000;
-    --dark-hl-9: #C8C8C8;
-    --light-hl-10: #098658;
-    --dark-hl-10: #B5CEA8;
+    --light-hl-4: #008000;
+    --dark-hl-4: #6A9955;
+    --light-hl-5: #0000FF;
+    --dark-hl-5: #569CD6;
+    --light-hl-6: #AF00DB;
+    --dark-hl-6: #C586C0;
+    --light-hl-7: #795E26;
+    --dark-hl-7: #DCDCAA;
+    --light-hl-8: #A31515;
+    --dark-hl-8: #CE9178;
+    --light-hl-9: #001080;
+    --dark-hl-9: #9CDCFE;
+    --light-hl-10: #0070C1;
+    --dark-hl-10: #4FC1FF;
+    --light-hl-11: #CD3131;
+    --dark-hl-11: #F44747;
+    --light-hl-12: #000000;
+    --dark-hl-12: #C8C8C8;
+    --light-hl-13: #098658;
+    --dark-hl-13: #B5CEA8;
     --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
@@ -37,6 +43,9 @@
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
     --code-background: var(--light-code-background);
 } }
 
@@ -52,6 +61,9 @@
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
     --code-background: var(--dark-code-background);
 } }
 
@@ -67,6 +79,9 @@ body.light {
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
     --code-background: var(--light-code-background);
 }
 
@@ -82,6 +97,9 @@ body.dark {
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
     --code-background: var(--dark-code-background);
 }
 
@@ -96,4 +114,7 @@ body.dark {
 .hl-8 { color: var(--hl-8); }
 .hl-9 { color: var(--hl-9); }
 .hl-10 { color: var(--hl-10); }
+.hl-11 { color: var(--hl-11); }
+.hl-12 { color: var(--hl-12); }
+.hl-13 { color: var(--hl-13); }
 pre, code { background: var(--code-background); }
