Created Basic Support Bundle Checks
- adding basic support_bundle api test functionality
- per PEP8, it's acceptable to have line length up to 99 characters,
  excluding docstrings, increased flake8 tox.ini configuration of
  increased max line length

Resolves: 350-collect-fleet-logs-in-support-bundle

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -58,5 +58,9 @@
     "delete_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates/%s",
     "create_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
     "list_vm_template_versions": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
-    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions/%s"
+    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions/%s",
+    "create_support_bundle": "{{ harvester_endpoint }}/apis/harvesterhci.io/v1beta1/namespaces/harvester-system/supportbundles",
+    "view_support_bundle": "{{ harvester_endpoint }}/apis/harvesterhci.io/v1beta1/namespaces/harvester-system/supportbundles/",
+    "download_support_bundle": "{{ harvester_endpoint }}/v1/harvester/supportbundles/",
+    "delete_support_bundle": "{{ harvester_endpoint }}/apis/harvesterhci.io/v1beta1/namespaces/harvester-system/supportbundles/"
 }
