--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -53,12 +53,12 @@
     "update_cluster_registration_url": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/cluster-registration-url",
     "get_kubeconfig": "{{ harvester_endpoint }}/v1/management.cattle.io.clusters/local?action=generateKubeconfig",
     "create_user": "{{ harvester_endpoint }}/v1/harvesterhci.io.users",
-    "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
-    "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
-    "delete_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates/%s",
-    "create_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
-    "list_vm_template_versions": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
-    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions/%s",
+    "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates",
+    "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates",
+    "delete_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates/%s",
+    "create_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions",
+    "list_vm_template_versions": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions",
+    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions/%s",
     "create_support_bundle": "{{ harvester_endpoint }}/apis/harvesterhci.io/v1beta1/namespaces/harvester-system/supportbundles",
     "view_support_bundle": "{{ harvester_endpoint }}/apis/harvesterhci.io/v1beta1/namespaces/harvester-system/supportbundles/",
     "download_support_bundle": "{{ harvester_endpoint }}/v1/harvester/supportbundles/",
