* [py-e2e] fix test scenario: most available CPU

--- a/harvester_e2e_tests/templates/basic_vm.json.j2
+++ b/harvester_e2e_tests/templates/basic_vm.json.j2
@@ -90,6 +90,7 @@
                     },
                     "resources": {
                         "requests": {
+                            "cpu": "{{ cpu | default(1) }}",
                             "memory": "{{ memory_gb | default(1) }}Gi"
                         }
                     }
