* [py-e2e] update VM spec to use _RunStrategy_

--- a/harvester_e2e_tests/templates/vm_with_volume.json.j2
+++ b/harvester_e2e_tests/templates/vm_with_volume.json.j2
@@ -21,7 +21,7 @@
         "namespace": "{{ vm_namespace | default('default') }}"
     },
     "spec": {
-        "running": true,
+        "runStrategy": "RerunOnFailure",
         "template": {
             "metadata": {
                 "labels": {
