--- a/harvester_e2e_tests/templates/vm_with_one_vlan.json.j2
+++ b/harvester_e2e_tests/templates/vm_with_one_vlan.json.j2
@@ -25,7 +25,7 @@
         "namespace": "{{ vm_namespace | default('default') }}"
     },
     "spec": {
-        "running": true,
+        "runStrategy": "RerunOnFailure",
         "template": {
             "metadata": {
                 "labels": {
