WIP: Now Node Gets Automatically Added
* automatically adding node to main jenkins controller
* automatically on secondary node creating public and private key
* automatically setting up public key for jenkins user on secondary node
  to be allowed as an authorized key
* scaffolding a way to automate updating the credential built on main
  node for the secondary node ssh
* wip on being able to run ssh-keyscan on main node of secondary node's
  ssh fingerprints for jenkins known_hosts file

Resolves: feat/2096-infrastructure-provisioning-edits

--- a/CI/harvester-installer/roles/jenkins/templates/config_jenkins_as_code.yaml.j2
+++ b/CI/harvester-installer/roles/jenkins/templates/config_jenkins_as_code.yaml.j2
@@ -21,6 +21,22 @@ jenkins:
 
   numExecutors: 1
 
+  nodes:
+    - permanent:
+        labelString: "slave"
+        mode: NORMAL
+        name: "slave-1"
+        remoteFS: "/var/lib/jenkins"
+        launcher:
+          ssh:
+            host: {{ secondarynodeip }}
+            credentialsId: ssh-private-key-cred-for-second-ci-jenkins-node
+            launchTimeoutSeconds: 60
+            maxNumRetries: 3
+            retryWaitTime: 30
+            sshHostKeyVerificationStrategy:
+              knownHostsFileKeyVerificationStrategy
+
 credentials:
   system:
     domainCredentials:
@@ -31,16 +47,20 @@ credentials:
               password: "{{ GITHUB_CI_PASSWORD }}"
               id: "for-harvester-ci"
               description: "github credential for harvester-installer ci"
-          {# - gitHubApp:
+          - gitHubApp:
               scope: "GLOBAL"
               # TODO: update "id" to not be current testing based ID
               id: "jenkins-irishgordo-team-harvester"
               description: "the GitHub App credentials needed to speak with the GitHub Checks API to bubble out information about Jenkins stages, elements of provisioning, test results and more - eliminating the need for those to go directly to Jenkins to view results and providing a more realtime sense of feedback"
               appID: "{{ GITHUB_APP_ID }}"
               # TODO: IMPL Of Private Key is funky, with the way it is doing the yaml ...tbd on best approach
-              {# privateKey: |
-                {{ GITHUB_APP_PRIVATE_KEY_CONVERTED | indent(20) }} #}
-              owner: "{{ GITHUB_APP_OWNER }}" #}
+              owner: "{{ GITHUB_APP_OWNER }}"
+          - basicSSHUserPrivateKey:
+              scope: "GLOBAL"
+              id: ssh-private-key-cred-for-second-ci-jenkins-node
+              username: jenkins
+              description: "SSH Creds for second jenkins node that talks to the main jenkins node"
+              
 
 security:
   queueItemAuthenticator:
