Move some test cases to smoke

--- a/docs/layouts/_default/baseof.html
+++ b/docs/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     {{ end }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css">
   </head>
-  <body class="markdown-body" style="display: flex; padding: 1%;">
+  <body class="markdown-body" style="display: flex; overflow: hidden;">
     {{ block "main" . }}
     {{ end }}
     {{ block "footer" . }}
