--- a/docs/layouts/_default/single.html
+++ b/docs/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ partial "sidebar.html" . }}
-<main style="padding: 1%; width: 70%;">
+<main style="padding: 1%; width: 70%; height: 100vh; overflow-y: scroll;">
   <h1 id="title">{{ .Title | markdownify }}</h1>
   <div>
     <article id="content">
