--- a/docs/layouts/partials/listing.html
+++ b/docs/layouts/partials/listing.html
@@ -1,6 +1,13 @@
 <ul>
 {{ range .CurrentSection.Pages }}
-  <li><a href="{{ .Permalink }}">{{ .Title | markdownify | plainify | safeHTML }}</a></li>
+  <li>
+    <a 
+      href="{{ .Permalink }}" 
+      class="menu-item"
+    >
+      {{ .Title | markdownify | plainify | safeHTML }}
+    </a>
+  </li>
   {{ if eq .Kind "section" }}
     {{ partial "listing.html" .Page }}
   {{ end }}
