--- a/integration/assets/highlight.css
+++ b/integration/assets/highlight.css
@@ -15,6 +15,12 @@
     --dark-hl-6: #9CDCFE;
     --light-hl-7: #0070C1;
     --dark-hl-7: #4FC1FF;
+    --light-hl-8: #800000;
+    --dark-hl-8: #569CD6;
+    --light-hl-9: #0000FF;
+    --dark-hl-9: #CE9178;
+    --light-hl-10: #098658;
+    --dark-hl-10: #B5CEA8;
     --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
@@ -28,6 +34,9 @@
     --hl-5: var(--light-hl-5);
     --hl-6: var(--light-hl-6);
     --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 } }
 
@@ -40,6 +49,9 @@
     --hl-5: var(--dark-hl-5);
     --hl-6: var(--dark-hl-6);
     --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 } }
 
@@ -52,6 +64,9 @@ body.light {
     --hl-5: var(--light-hl-5);
     --hl-6: var(--light-hl-6);
     --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
     --code-background: var(--light-code-background);
 }
 
@@ -64,6 +79,9 @@ body.dark {
     --hl-5: var(--dark-hl-5);
     --hl-6: var(--dark-hl-6);
     --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
     --code-background: var(--dark-code-background);
 }
 
@@ -75,4 +93,7 @@ body.dark {
 .hl-5 { color: var(--hl-5); }
 .hl-6 { color: var(--hl-6); }
 .hl-7 { color: var(--hl-7); }
+.hl-8 { color: var(--hl-8); }
+.hl-9 { color: var(--hl-9); }
+.hl-10 { color: var(--hl-10); }
 pre, code { background: var(--code-background); }
